--- a/src/app/logout/logout.component.html
+++ b/src/app/logout/logout.component.html
@@ -54,7 +54,7 @@
             <button type="button" (click)="register()" class="btn btn-link">Register now</button>
             <!-- <button class="nav-item nav-link-edit" [routerLink]="['card']">Home</button > -->
         </div>
-        <router-outlet></router-outlet>
+        <!-- <router-outlet></router-outlet> -->
                 </div>
             </div>
 
