--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -7,12 +7,14 @@
             <!-- <li class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a routerLink="currentstud">Current Student                  Request</a></li> -->
             <li class="ml-2" style="list-style-image: url(../assets/group.svg);"><a routerLink="studentlist">student List</a></li>
             <li class="ml-2" style="list-style-image: url(../assets/settings.svg);"><a routerLink="setting">Settings</a></li>
-            <li class="ml-2" style="list-style-image: url(../assets/logout.svg);"><a routerLink="logout">Logout</a></li>
-            <li class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a routerLink="pststudpost">Create Post</a></li>
+            <!-- <li class="ml-2" style="list-style-image: url(../assets/logout.svg);"><a routerLink="logout">Logout</a></li> -->
+
+            <li *ngIf="api.isAdminLOgin == false" class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a routerLink="pststudpost">Create Post</a></li>
             <li class="ml-2" style="list-style-image: url(../assets/tickercheck.svg);"><a routerLink="postliist">Post list</a></li>
             <li class="ml-2" style="list-style-image: url(../assets/group.svg);"><a routerLink="register">Register</a></li>
 
-            
+            <!-- sting/paststud'
+ -->
 
 
             <!-- postliist -->
@@ -25,7 +27,7 @@
           <router-outlet></router-outlet>
           <!-- <app-card></app-card> -->
           <!-- <app-setting></app-setting> -->
-          <app-card></app-card>
+          <!-- <app-card></app-card> -->
           <!-- <app-pststudpost></app-pststudpost>  -->
           <!-- <app-currentstud></app-currentstud> -->
       </div>
