--- a/src/app/testing/testing.component.html
+++ b/src/app/testing/testing.component.html
@@ -31,44 +31,29 @@
         </nav>
     </div>
     <app-sidenav></app-sidenav>
-    <!-- <div class="mainContent "> -->
-        <!-- <div class="sidenavigate shadow">
-            <ul>
-                <li class="ml-2" style="list-style-image:url(../assets/home.svg)"><a href="#">Posts</a></li>
-                <li class="ml-2" style="list-style-image: url(../assets/tickercheck.svg);"><a href="#">Past Student
-                        Request</a></li>
-                <li class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a href="#">Current Student
-                        Request</a></li>
-                <li class="ml-2" style="list-style-image: url(../assets/group.svg);"><a href="#">student List</a></li>
-                <li class="ml-2" style="list-style-image: url(../assets/settings.svg);"><a href="#">Settings</a></li>
-                <li class="ml-2" style="list-style-image: url(../assets/logout.svg);"><a href="#">Logout</a></li>
-            </ul>
-        </div> -->
-        <div class="carding p-4" style="background-color: #2F2483;">
+
+   
+        <!-- <div class="carding p-4" style="background-color: #2F2483;">
             <div class="row">
 
                 <i class="material-icons ml-4 mt-2" style="color:white ;">home</i>
                 <p class="mt-2 ml-1" style="font-size:16px; font-weight: bold; color: white;">Posts</p>
             </div>
-            <!-- </div> -->
+        
             <div class="card mb-4" *ngFor="let x of data; let i = index">
-                <!-- <div class="card-header">
-              Featured
-            </div> -->
+             
                 <div class="card-body">
-                    <!-- <h5 class="card-title">Special title treatment</h5> -->
+                   
                     <img src="../assets/avt.jfif" class="rounded-circle-avt" width="2%">
                     <i class="material-icons pull-right" style="font-size:20px ;cursor: pointer;"
                         (click)="delete(i)">delete</i>
                     <span style="color:#2F2483; font-size: 15px; font-weight: bold;"> Tamilselvan</span>
                     <h6 class="mt-1">opening for freshers from acer</h6>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content </p>
-                    <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                 
                 </div>
-                <!-- <div class="card-footer text-muted">
-              2 days ago
-            </div> -->
+              
             </div>
-        </div>
-    <!-- </div> -->
+        </div> -->
+   
 </div>
