--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,34 +1,90 @@
 <div class="mainContent " style="margin-top:15px;">
-    <div class="sidenavigate shadow">
-        <ul>
-            <li class="ml-2" style="list-style-image:url(../assets/home.svg)"><a  routerLink="card">Posts</a></li>
-            <li class="ml-2" style="list-style-image: url(../assets/tickercheck.svg);"><a  routerLink="paststud">Past Student
-                    Requestss</a></li>
-            <!-- <li class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a routerLink="currentstud">Current Student                  Request</a></li> -->
-            <li class="ml-2" style="list-style-image: url(../assets/group.svg);"><a routerLink="studentlist">student List</a></li>
-            <li class="ml-2" style="list-style-image: url(../assets/settings.svg);"><a routerLink="setting">Settings</a></li>
-            <!-- <li class="ml-2" style="list-style-image: url(../assets/logout.svg);"><a routerLink="logout">Logout</a></li> -->
+    <div class="sidenavigate shadow" *ngIf="isRegister">
+        isPassedOutStu--{{isPassedOutStu}}
+        api.isAdminLOgin--{{api.isAdminLOgin}}
+        isCurrentStu--{{isCurrentStu}}
+        <ul *ngIf="api.isAdminLOgin == true && isPassedOutStu == 'false' && isCurrentStu == 'false'">
+            <li class="ml-2" style="list-style-image:url(../assets/home.svg)"><a routerLink="card">Posts</a></li>
 
-            <li *ngIf="api.isAdminLOgin == false" class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a routerLink="pststudpost">Create Post</a></li>
-            <li *ngIf="api.isAdminLOgin == false" class="ml-2" style="list-style-image: url(../assets/tickercheck.svg);"><a routerLink="postliist">Post list</a></li>
-            <li class="ml-2" style="list-style-image: url(../assets/group.svg);"><a routerLink="register">Register</a></li>
+            <li class="ml-2" style="list-style-image: url(../assets/tickercheck.svg);"><a routerLink="paststud">Past
+                    Student
+                    Requests</a></li>
 
-            <!-- sting/paststud'
- -->
+            <li class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a
+                    routerLink="currentstud">Current Student
+                    Request</a></li>
 
+            <li class="ml-2" style="list-style-image: url(../assets/group.svg);"><a routerLink="studentlist">student
+                    List</a></li>
+            <li class="ml-2" style="list-style-image: url(../assets/settings.svg);"><a routerLink="setting">Settings</a>
+            </li>
 
-            <!-- postliist -->
-        
+            <!-- <li class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a routerLink="pststudpost">Create
+                    Post</a>
+            </li>
+
+            <li class="ml-2" style="list-style-image: url(../assets/tickercheck.svg);"><a routerLink="postliist">Post
+                    list</a></li> -->
         </ul>
-    </div>       
-      <!-- <app-post></app-post> -->
-      <div class="cardSize">
 
-          <router-outlet></router-outlet>
-          <!-- <app-card></app-card> -->
-          <!-- <app-setting></app-setting> -->
-          <!-- <app-card></app-card> -->
-          <!-- <app-pststudpost></app-pststudpost>  -->
-          <!-- <app-currentstud></app-currentstud> -->
-      </div>
+        <ul *ngIf="isPassedOutStu == 'true' ">
+            <!-- <li class="ml-2" style="list-style-image:url(../assets/home.svg)"><a routerLink="card">Posts</a></li>
+
+            <li class="ml-2" style="list-style-image: url(../assets/tickercheck.svg);"><a routerLink="paststud">Past
+                    Student
+                    Requests</a></li>
+
+            <li class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a
+                    routerLink="currentstud">Current Student
+                    Request</a></li>
+
+            <li class="ml-2" style="list-style-image: url(../assets/group.svg);"><a routerLink="studentlist">student
+                    List</a></li>
+            <li class="ml-2" style="list-style-image: url(../assets/settings.svg);"><a routerLink="setting">Settings</a>
+            </li> -->
+
+            <li class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a routerLink="pststudpost">Create
+                    Post</a>
+            </li>
+
+            <li class="ml-2" style="list-style-image: url(../assets/tickercheck.svg);"><a routerLink="postliist">Post
+                    list</a></li>
+        </ul>
+
+        <ul *ngIf="isCurrentStu == 'true'">
+            <li class="ml-2" style="list-style-image:url(../assets/home.svg)"><a routerLink="card">Posts</a></li>
+
+            <!-- <li class="ml-2" style="list-style-image: url(../assets/tickercheck.svg);"><a routerLink="paststud">Past
+                    Student
+                    Requests</a></li>
+
+            <li class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a
+                    routerLink="currentstud">Current Student
+                    Request</a></li>
+
+            <li class="ml-2" style="list-style-image: url(../assets/group.svg);"><a routerLink="studentlist">student
+                    List</a></li>
+            <li class="ml-2" style="list-style-image: url(../assets/settings.svg);"><a routerLink="setting">Settings</a>
+            </li>
+
+            <li class="ml-2" style="list-style-image: url(../assets/presentall.svg);"><a routerLink="pststudpost">Create
+                    Post</a>
+            </li>
+
+            <li class="ml-2" style="list-style-image: url(../assets/tickercheck.svg);"><a routerLink="postliist">Post
+                    list</a></li> -->
+        </ul>
+
+
+    </div>
+    <!-- <app-post></app-post> -->
+    <div class="cardSize">
+
+        <router-outlet></router-outlet>
+        <!-- <app-card></app-card> -->
+        <!-- <app-setting></app-setting> -->
+        <!-- <app-card></app-card> -->
+        <!-- <app-pststudpost></app-pststudpost>  -->
+        <!-- <app-currentstud></app-currentstud> -->
+    </div>
 </div>
